[project]
authors = [
  {name = "Mark Servilla", email = "mark.servilla@gmail.com"},
  {name = "James Brunt", email = "jbrunt@unm.edu"}
]
name = "soh"
version = "2025.03.18"
description = "PASTA+ and related services State of Health monitoring"
requires-python = ">=3.11,<3.12"

dependencies = [
  "aiohttp",
  "aiodns",
  "asyncssh",
  "click",
  "cryptography",
  "daiquiri",
  "faust-cchardet",
  "ldap3",
  "paramiko",
  "pendulum",
  "psycopg2",
  "pytest",
  "pytzdata",
  "requests",
  "setuptools",
  "sqlalchemy==1.4.46",
  "urllib3",
  "wheel",
]

[project.scripts]
health_check = "soh.health_check:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["soh*"]
exclude = ["tests*", "tests", "tests.*"]
