[project]
authors = [
    {name = "Mark Servilla", email = "mark.servilla@gmail.com"},
    {name = "James Brunt", email = "jbrunt@unm.edu"}
]
dependencies = []
name = "soh"
requires-python = ">= 3.11"
version = "2026.03.15"

[project.scripts]
health_check = "soh.health_check:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
soh = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
psycopg2-binary = ">=2.9.10,<3"
aiohttp = ">=3.13.3,<4"
aiodns = ">=3.0.0,<4"
asyncssh = ">=2.22.0,<3"
click = ">=8.3.1,<9"
cryptography = ">=46.0.5,<47"
daiquiri = ">=3.0.0,<4"
faust-cchardet = ">=2.1.19,<3"
ldap3 = ">=2.9.1,<3"
paramiko = ">=4.0.0,<5"
pendulum = ">=3.2.0,<4"
psycopg2 = ">=2.9.10,<3"
pytest = ">=9.0.2,<10"
pytzdata = ">=2020.1,<2021"
requests = ">=2.32.5,<3"
urllib3 = ">=2.6.3,<3"
sqlalchemy = "<2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
